--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,7 +17,8 @@
         <p>Then find the friend with the greatest compatibility!</p>
         <a id="btns" class="btn btn-primary btn-lg" href="/survey" role="button">Take Survey</a>
       </div>
-      <a href="/api/friend">API Table</a>
+      <a href="/api/friend">API Table</a>      <a href="https://github.com/phihainguyen/FindMe">Github</a>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
