--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Survey</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,12 +24,35 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+<style>
+.wrapper{
+    width:80%;
+    margin: auto;
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+.form-control{
+    width: 30%;
+    margin-bottom: 20px;
+}
+#name, #picture{
+    width: 90%;
+    margin-bottom: 20px;
 
+}
+#surveyBtn{
+    margin-top: 50px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 60px;
+    font-size: 30px;
+}
+</style>
 </head>
 
 <body>
 
-    <div>
+    <div class="wrapper">
         <h1>Survey</h1>
         <h2>About You</h2>
         <div id="survey">
